fix: idk what im doing its just broken in safari tbh.

--- a/src/components/ImgStack/ImgStack.module.css
+++ b/src/components/ImgStack/ImgStack.module.css
@@ -13,9 +13,8 @@
 
 .img {
 	width: 100%;
-	max-height: 90vh;
 	display: block;
-	object-fit: contain;
+	object-fit: cover;
 	border-radius: 2rem;
 	box-shadow: 0 0 40px rgba(0,0,0,0.25);
 }
@@ -160,4 +159,10 @@
 	padding: 0.8rem;
 	max-width: 80%;
 	display: none;
+}
+
+@media (width <= 1200px) {
+	.imgContainer {
+		transition-duration: 1200ms;
+	}
 }
